# VectorizerLib

./: CMakeLists.txt  README.md
include/Vectorizer/: Math.h  Vectorizer.h
src/Core/: Vectorizer.cpp
src/IO/: ImageLoader.cpp  ImageLoader.h
src/Math/: Math.cpp
src/Utils/: Util.h
